// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`babel-preset-nodely when browser targets passed in should provide expected config 1`] = `
Object {
  "plugins": Array [
    "@babel/plugin-proposal-class-properties",
    "@babel/plugin-syntax-object-rest-spread",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": Object {
          "browsers": Array [
            "last 2 versions",
            "ie10",
          ],
        },
      },
    ],
    "@babel/flow",
    "@babel/react",
  ],
}
`;

exports[`babel-preset-nodely when no options provided should provide expected config 1`] = `
Object {
  "plugins": Array [
    "@babel/plugin-proposal-class-properties",
    "@babel/plugin-syntax-object-rest-spread",
  ],
  "presets": Array [
    "@babel/env",
    "@babel/flow",
    "@babel/react",
  ],
}
`;

exports[`babel-preset-nodely when node targets passed in should provide expected config 1`] = `
Object {
  "plugins": Array [
    "@babel/plugin-proposal-class-properties",
    "@babel/plugin-syntax-object-rest-spread",
  ],
  "presets": Array [
    Array [
      "@babel/env",
      Object {
        "targets": Object {
          "node": "6",
        },
      },
    ],
    "@babel/flow",
    "@babel/react",
  ],
}
`;
